# RaytracerCPU

./: CMakeLists.txt  README.md
resources/: amy.pov  beers.pov  box_nr.pov  box_refract.pov  bunny.pov  checkerbox.pov  cornell.pov  fresnel1.pov  fresnel2.pov  fresnel3.pov  gnarly.pov  pdr_grid.pov  proj.pov  recurse_simp2.pov  refract2.pov  refract_refl.pov  rotate.pov  scale.pov  shiny.pov  simple-gi.pov  simple_reflect1.pov  simple_reflect2.pov  simple_reflect3.pov  simple_refract.pov  simple_tri.pov  solar_system.pov  tori.pov  transforms1.pov  valentine2.pov
src/: BBH.cpp  BBH.hpp  BBHTree.cpp  BBHTree.hpp  Box.cpp  Box.hpp  Camera.cpp  Camera.hpp  Diagnostic.cpp  Diagnostic.hpp  Lighting.cpp  Lighting.hpp  Object.hpp  Parse.cpp  Parse.hpp  Plane.cpp  Plane.hpp  Ray.cpp  Ray.hpp  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp  Tracer.cpp  Tracer.hpp  Triangle.cpp  Triangle.hpp  main.cpp
website/: index.html
